--- a/GJ1P/src/app.css
+++ b/GJ1P/src/app.css
@@ -6,7 +6,15 @@
     font-family: 'open sans', sans-serif;
 }
 
-.menu > a{
+.menu > div{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.menu > div > a{
     height: 100%;
     padding: 10px;
     display: flex;
@@ -14,7 +22,7 @@
     justify-content: center;
 }
 
-.menu > a:hover{
+.menu > div > a:hover{
     background-color: theme('colors.red.500');   
 }
 
